--- a/index.html
+++ b/index.html
@@ -1271,7 +1271,7 @@
                         <i class="fas fa-chart-line"></i>
                     </div>
                     <h3 class="about-title">Our Growth</h3>
-                    <p class="about-text">From our humble beginnings to a diversified enterprise, our journey is marked by continuous growth and strategic expansion into new sectors.</p>
+                    <p class="about-text">From our humble beginnings to a diversified portfolio, our journey is marked by continuous growth and strategic expansion into new sectors.</p>
                     <a href="#" class="btn-link">Learn More</a>
                 </div>
             </div>
@@ -1287,7 +1287,7 @@
                         <div class="carousel-overlay"></div>
                         <div class="carousel-content">
                             <h2 class="carousel-title">Luxury Residential Complex</h2>
-                            <p class="carousel-description">Experience premium living spaces designed for comfort and elegance.</p>
+                            <p class="carousel-description">Experience premium living spaces designed for comfort and elegance.Coming soon </p>
                         </div>
                     </div>
                 </div>
@@ -1296,7 +1296,7 @@
                         <div class="carousel-overlay"></div>
                         <div class="carousel-content">
                             <h2 class="carousel-title">Modern Office Buildings</h2>
-                            <p class="carousel-description">Innovative commercial spaces that inspire productivity and growth.</p>
+                            <p class="carousel-description">Rent commercial spaces that inspire productivity and growth.</p>
                         </div>
                     </div>
                 </div>
@@ -1334,7 +1334,7 @@
             <div class="section-header">
                 <p class="section-subtitle">Our Services</p>
                 <h2 class="section-title">Premium Solutions Tailored to Your Needs</h2>
-                <p class="section-description">We offer a comprehensive range of property development and agricultural services designed to create lasting value.</p>
+                <p class="section-description">We offer a comprehensive range of property rentals and agricultural services designed to create lasting value.</p>
             </div>
             <div class="services-grid">
                 <div class="service-card fade-in">
@@ -1409,7 +1409,7 @@
                         <i class="fas fa-building"></i>
                     </div>
                     <h3 class="company-name">Matendere Properties</h3>
-                    <p class="company-description">Our flagship company specializing in premium residential and commercial property development across multiple regions.</p>
+                    <p class="company-description">Our flagship company specializing in premium residential and commercial property rental across multiple regions.</p>
                     <a href="#" class="btn-link">Visit Website</a>
                 </div>
                 <div class="company-card fade-in">
@@ -1460,7 +1460,7 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-label">Our Location</div>
-                                <div class="contact-value">123 Business Avenue, City Center, Country</div>
+                                <div class="contact-value">menabily estate </div>
                             </div>
                         </li>
                         <li class="contact-item">
@@ -1469,7 +1469,7 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-label">Call Us</div>
-                                <div class="contact-value"><a href="tel:+1234567890">+123 456 7890</a></div>
+                                <div class="contact-value"><a href="tel:+1234567890">+2637 456 7890</a></div>
                             </div>
                         </li>
                         <li class="contact-item">
@@ -1570,7 +1570,7 @@
                     <div style="margin-top: 1.5rem;">
                         <div class="footer-contact">
                             <i class="fas fa-phone-alt"></i>
-                            <div>+123 456 7890</div>
+                            <div>+2637 456 7890</div>
                         </div>
                         <div class="footer-contact">
                             <i class="fas fa-envelope"></i>
